[gd_scene load_steps=2 format=3 uid="uid://dd2ollhk02pmn"]

[ext_resource type="Script" uid="uid://cir0648vkba6s" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.5
offset_right = 78.5
offset_bottom = 78.0
grow_horizontal = 2

[node name="UsernameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/UsernameContainer"]
layout_mode = 2
text = "Username: "

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/UsernameContainer"]
layout_mode = 2

[node name="IPContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/IPContainer"]
layout_mode = 2
text = "Server IP:    "

[node name="IPInput" type="LineEdit" parent="VBoxContainer/IPContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Host Server"

[node name="JoinButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Join Server"

[node name="ConnectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayersContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayersList" type="Label" parent="PlayersContainer"]
layout_mode = 2

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.5
offset_right = 80.0
offset_bottom = 21.5
grow_vertical = 2

[node name="ChatDisplay" type="TextEdit" parent="ChatContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ChatInputContainer" type="HBoxContainer" parent="ChatContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="ChatContainer/ChatInputContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Type message..."

[node name="SendButton" type="Button" parent="ChatContainer/ChatInputContainer"]
layout_mode = 2
text = "Send
"
